chore: Update MongoDB and email configuration in .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
 PORT=3000
 
+# MongoDB Configuration
 MONGODB_USER=your_mongodb_user
 MONGODB_PASSWORD=your_mongodb_password
 MONGODB_DBNAME=your_mongodb_dbname
@@ -8,8 +9,5 @@ MONGODB_DBNAME=your_mongodb_dbname
 TOKEN_SECRET=your_secret_key
 
 # Email Configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=465
-SMTP_SERVICE=gmail
-SMTP_MAIL="your_email"
-SMTP_APP_PASS="your_code"
+EMAIL_USER=your_email
+EMAIL_PASS=your_email_password
