feat: Update environment configurations and add Swagger documentation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,13 @@
-PORT=3000
+PORT=5000
+
+# Environment
+NODE_ENV=development
+
+# Base URL
+BASE_URL=http://localhost:5000
 
 # MongoDB Configuration
-MONGODB_USER=your_mongodb_user
-MONGODB_PASSWORD=your_mongodb_password
-MONGODB_DBNAME=your_mongodb_dbname
+MONGO_URI=your_mongodb_uri
 
 # JWT Secret Key
 TOKEN_SECRET=your_secret_key
