--- a/backend/package.json
+++ b/backend/package.json
@@ -7,20 +7,30 @@
     "dev": "nodemon index.js",
     "start": "node --watch index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "node",
+    "express"
+  ],
+  "author": "Manthan Ankolekar",
+  "license": "MIT",
+  "description": "This is the backend of the Expense Tracker App",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.0",
-    "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4"
+    "mongoose": "^8.10.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
