feat: Add AI-powered insights endpoint and environment variable validation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,6 @@ TOKEN_SECRET=your_secret_key
 # Email Configuration
 EMAIL_USER=your_email
 EMAIL_PASS=your_email_password
+
+# Gemini API Key
+GEMINI_API_KEY=your_gemini_api_key
