--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "description": "This is the backend of the Expense Tracker App",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
