feat: Implement social authentication with Google and GitHub
- Updated backend dependencies to include passport and social authentication strategies.
- Added Google and GitHub OAuth routes in auth.js.
- Created passport configuration for Google and GitHub strategies.
- Enhanced login and signup components to include social login options.
- Added a new SocialAuthComponent to handle the OAuth callback and token processing.
- Updated routing to include a path for social authentication.
- Modified AuthService to handle social authentication tokens.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,3 +18,9 @@ EMAIL_PASS=your_email_password
 
 # Gemini API Key
 GEMINI_API_KEY=your_gemini_api_key
+
+# Google and GitHub OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
