feat: Update environment variable references for frontend and backend URLs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,8 +3,11 @@ PORT=5000
 # Environment
 NODE_ENV=development
 
-# Base URL
-BASE_URL=http://localhost:5000
+# Frontend URL
+FRONTEND_URL=http://localhost:4200
+
+# Backend URL
+BACKEND_URL=http://localhost:5000
 
 # MongoDB Configuration
 MONGO_URI=your_mongodb_uri
